[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/UI/Menu/Update.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/Menu/Updating_UI.tscn" type="PackedScene" id=2]

[node name="Version_About" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -39.0
margin_right = 82.5
margin_bottom = 39.0
size_flags_horizontal = 5
size_flags_vertical = 5
window_title = "About this version"
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 7.0
margin_right = 158.0
margin_bottom = 78.0
alignment = 1

[node name="Version" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 151.0
margin_bottom = 22.0
text = "Version: DATE_VERSION"

[node name="Update_check" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 151.0
margin_bottom = 46.0
text = "Check for updates"

[node name="Change_log" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 151.0
margin_bottom = 70.0
text = "Change log"

[node name="Change_log" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.5
margin_top = -176.0
margin_right = 144.5
margin_bottom = 177.0
window_title = "Change log"

[node name="Panel" type="Panel" parent="Change_log"]
margin_left = 8.0
margin_top = 8.0
margin_right = 258.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Change_log/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Change_log/Panel/ScrollContainer"]
margin_right = 250.0
margin_bottom = 309.0
rect_min_size = Vector2( 10, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "This is an example of a change log:
* Removed ugly buttons
* Added awesomeness
* Added Herobrine
* Deleted Herobrine"
text = "This is an example of a change log:
* Removed ugly buttons
* Added awesomeness
* Added Moondust
* Deleted Moondust"

[node name="UpdatingUI" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Update_check" to="." method="_on_Update_check_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Change_log" to="." method="_on_Change_log_pressed"]
[connection signal="confirmed" from="Change_log" to="." method="_on_Change_log_confirmed"]
